# imguploader

./: .gitignore  .travis.yml  LICENSE  README.md
api/: Cargo.toml  coverage.sh  local_cors.xml  package-lock.json  package.json  serverless.yml
api/src/: main.rs
front/: .env.dev  .env.release  .env.sample  .eslintrc.json  .prettierrc  package-lock.json  package.json  serverless.yml  tsconfig.json
front/public/: index.html
front/src/: App.test.tsx  App.tsx  font.css  index.tsx  reportWebVitals.ts
front/src/api/: api.test.ts  api.ts
front/src/components/: GlobalStyle.ts
front/src/components/atoms/: ButtonStyle.tsx  CardDescStyle.ts  CardHeader.test.tsx  CardHeader.tsx  Loader.tsx  UploadImageButton.test.tsx  UploadImageButton.tsx
front/src/components/molecules/: CardDescHeader.test.tsx  CardDescHeader.tsx  UploadImageForm.test.tsx  UploadImageForm.tsx  UploadedImage.test.tsx  UploadedImage.tsx
front/src/components/organisms/: CardBaseStyle.ts  CompleteCard.tsx  SelectImageCard.test.tsx  SelectImageCard.tsx  UploadingCard.tsx
