[package]
name = "geturl"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_derive = "1.0.117"
serde = "1.0.117"
serde_json = "1.0.59"
simple_logger = "1.11.0"
log = "0.4.11"
anyhow = "1.0.34"
chrono = "0.4"
rand = "0.7.3"
sha2 = "0.9.2"
mime_guess = { version = "2.0.3", features = ["rev-mappings"] }
rusoto_core = { git = "https://github.com/zeroclock/rusoto", branch = "s3-post-policy" }
rusoto_s3 = { git = "https://github.com/zeroclock/rusoto", branch = "s3-post-policy" }
rusoto_mock = { git = "https://github.com/zeroclock/rusoto", branch = "s3-post-policy" }
rusoto_credential = { git = "https://github.com/zeroclock/rusoto", branch = "s3-post-policy" }
rusoto_signature = { git = "https://github.com/zeroclock/rusoto", branch = "s3-post-policy" }
